{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 17,
  "lineage": "7d32281b-3a1a-3eb9-4698-9c4f3d4d07f0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-22T10:51:53.837-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/perceptive-day-358116/global/firewalls/vikas-fw-allow-iap-hc",
            "log_config": [],
            "name": "vikas-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/networks/vpc-network",
            "priority": 1000,
            "project": "perceptive-day-358116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/firewalls/vikas-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-22T10:51:53.751-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/perceptive-day-358116/global/firewalls/vikas-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "vikas-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/networks/vpc-network",
            "priority": 1000,
            "project": "perceptive-day-358116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/firewalls/vikas-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-08-22T10:54:01.735-07:00",
            "id": "projects/perceptive-day-358116/regions/asia-east1/forwardingRules/vikas-forwarding-rule",
            "ip_address": "10.0.2.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "vikas-forwarding-rule",
            "network": "projects/perceptive-day-358116/global/networks/vpc-network",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "perceptive-day-358116",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/beta/projects/perceptive-day-358116/regions/asia-east1/forwardingRules/vikas-forwarding-rule",
            "subnetwork": "projects/perceptive-day-358116/regions/asia-east1/subnetworks/vikas-subnet2",
            "target": "projects/perceptive-day-358116/regions/asia-east1/targetHttpProxies/vikas-target-http-proxy"
          },
          "dependencies": [
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_subnetwork.proxy_subnet",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-10-buster-v20220719",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/zones/asia-east1-b/disks/vikas-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/perceptive-day-358116/zones/asia-east1-b/instances/vikas-test-vm",
            "instance_id": "6794264822342909068",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "VsuQm8W984E=",
            "name": "vikas-test-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/networks/vpc-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/subnetworks/vikas-subnet2",
                "subnetwork_project": "perceptive-day-358116"
              }
            ],
            "project": "perceptive-day-358116",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/zones/asia-east1-b/instances/vikas-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/perceptive-day-358116/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "perceptive-day-358116",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/networks/vpc-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/instanceGroups/vikas-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-08-22T10:53:14.704-07:00",
            "enable_cdn": false,
            "fingerprint": "DqXVH5NKPRM=",
            "health_checks": [
              "projects/perceptive-day-358116/regions/asia-east1/healthChecks/vikas-hc"
            ],
            "id": "projects/perceptive-day-358116/regions/asia-east1/backendServices/vikas-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "vikas-backend-subnet",
            "port_name": "http",
            "project": "perceptive-day-358116",
            "protocol": "HTTP",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/backendServices/vikas-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-22T10:53:41.283-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/backendServices/vikas-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "AntMIL2YpxA=",
            "host_rule": [],
            "id": "projects/perceptive-day-358116/regions/asia-east1/urlMaps/vikas-regional-url-map",
            "map_id": 5904586957139115082,
            "name": "vikas-regional-url-map",
            "path_matcher": [],
            "project": "perceptive-day-358116",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/urlMaps/vikas-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-22T10:51:57.985-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/perceptive-day-358116/regions/asia-east1/subnetworks/vikas-subnet1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "vikas-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "perceptive-day-358116",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "asia-east1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/subnetworks/vikas-subnet1"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-22T10:51:56.119-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/perceptive-day-358116/regions/asia-east1/subnetworks/vikas-subnet2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "vikas-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "perceptive-day-358116",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perceptive-day-358116/regions/asia-east1/subnetworks/vikas-subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}